[package]
name = "ctox-engine-sdk"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/engine"

[lib]
name = "engine"

[dependencies]
engine-core.workspace = true
engine-macros.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
serde_json.workspace = true
serde.workspace = true
schemars.workspace = true
image.workspace = true
indexmap.workspace = true
either.workspace = true
futures.workspace = true
reqwest.workspace = true
rand.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
# NVIDIA CUDA GPU support. Auto-enables flash-attn: the engine treats
# FlashAttention as part of the baseline NVIDIA configuration — skipping it
# regresses decode by ~2–3× on Ampere+. Pre-Ampere GPUs (compute cap < sm_80)
# must set ENGINE_DISABLE_FLASH_ATTN=1 at runtime; they cannot compile out of
# it without dropping the whole cuda feature.
cuda = ["engine-core/cuda", "flash-attn"]
# cuDNN acceleration (requires cuda)
cudnn = ["engine-core/cudnn"]
# Apple Metal GPU support (macOS/iOS)
metal = ["engine-core/metal"]
# Flash Attention 2 kernels (requires cuda)
flash-attn = ["engine-core/cuda", "engine-core/flash-attn"]
# Flash Attention 3 kernels (Hopper / sm_90+, requires cuda)
flash-attn-v3 = ["engine-core/cuda", "engine-core/flash-attn-v3"]
# Apple Accelerate framework for BLAS operations
accelerate = ["engine-core/accelerate"]
# Intel MKL acceleration for BLAS operations
mkl = ["engine-core/mkl"]
# Multi-GPU support via NCCL (requires cuda)
nccl = ["engine-core/nccl"]
# Use ring instead of aws-lc-rs for TLS
ring = ["engine-core/ring"]
