[package]
name = "ctox-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ctox-app-server"
path = "src/main.rs"

[[bin]]
name = "ctox-app-server-test-notify-capture"
path = "src/bin/notify_capture.rs"

[lib]
name = "ctox_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
ctox-arg0 = { workspace = true }
ctox-cloud-requirements = { workspace = true }
ctox-core = { workspace = true }
ctox-otel = { workspace = true }
ctox-shell-command = { workspace = true }
ctox-utils-cli = { workspace = true }
ctox-utils-pty = { workspace = true }
ctox-file-search = { workspace = true }
ctox-backend-client = { workspace = true }
ctox-protocol = { workspace = true }
ctox-app-server-protocol = { workspace = true }
ctox-feedback = { workspace = true }
ctox-rmcp-client = { workspace = true }
ctox-state = { workspace = true }
ctox-utils-absolute-path = { workspace = true }
ctox-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["serde", "v7"] }
walkdir = { workspace = true }

[dev-dependencies]
app_test_support = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pretty_assertions = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
tracing-opentelemetry = { workspace = true }
wiremock = { workspace = true }
